*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -2,59 +2,59 @@
 
 ==ძვ. წ. VI საუკუნე==
 
-[[ძვ. წ. 509|509]] - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
+* [[ძვ. წ. 509|509]] - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
-[[ძვ. წ. 509|509]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
+* [[ძვ. წ. 509|509]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
-[[ძვ. წ. 508|508]] - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
+*[[ძვ. წ. 508|508]] - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
 
-[[ძვ. წ. 507|507]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა III, მარკუს ჰორაციუს პულნუს II
+*[[ძვ. წ. 507|507]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა III, მარკუს ჰორაციუს პულნუს II
 
-[[ძვ. წ. 506|506]] - სპ. ლარციუს რუსფუსი (ფლავიუსი), ტიტუს ჰერმინიუს აკილინუსი
+*[[ძვ. წ. 506|506]] - სპ. ლარციუს რუსფუსი (ფლავიუსი), ტიტუს ჰერმინიუს აკილინუსი
 
-[[ძვ. წ. 505|505]] - მარკუს ვალერიუს ვოლუსი (ვოლუსუსი?), პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი
+*[[ძვ. წ. 505|505]] - მარკუს ვალერიუს ვოლუსი (ვოლუსუსი?), პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი
 
-[[ძვ. წ. 504|504]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა IV, ტიტუს ლუკრეციუს ტრიციპიტინუს II
+*[[ძვ. წ. 504|504]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა IV, ტიტუს ლუკრეციუს ტრიციპიტინუს II
 
-[[ძვ. წ. 503|503]] - მემენიუს აგრიპა ც.ფ. ლანატუსი, პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი II
+*[[ძვ. წ. 503|503]] - მემენიუს აგრიპა ც.ფ. ლანატუსი, პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი II
 
-[[ძვ. წ. 502|502]] - ოპიტერ ვერგინიუს ოპიტ. ფ. ტრიკოსტუსი, სპურიუს კასიუს ვესელინუსი (ან ვისელინუსი)
+*[[ძვ. წ. 502|502]] - ოპიტერ ვერგინიუს ოპიტ. ფ. ტრიკოსტუსი, სპურიუს კასიუს ვესელინუსი (ან ვისელინუსი)
 
-[[ძვ. წ. 501|501]] - პოსტუმინუს კომინიუს აურუნკუსი, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი)
+*[[ძვ. წ. 501|501]] - პოსტუმინუს კომინიუს აურუნკუსი, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი)
 
 ==ძვ. წ. V საუკუნე==
 
-[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
+*[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
                               
-[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
+*[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
 
-[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
+*[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
 
-[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
 
-[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი [[დიქტატორი]] გახდა.
+*[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი [[დიქტატორი]] გახდა.
 
-[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
+*[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
 
-[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
+*[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
 
-[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
 
-[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
+*[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
 
-[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
+*[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
 
-[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
+*[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
 
-[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
+*[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
 
-[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
+*[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
 
-[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
+*[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
 
-[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
 
 [[ძვ. წ. 484|484]] - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
 
@@ -102,13 +102,13 @@
 
 [[ძვ. წ. 462|462]] - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
 
-[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
+*[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
 
-[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
+*[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
 
-[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
+*[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
 
-[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
+*[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
 
 [[ძვ. წ. 457|457]] - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
 
