/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -230,7 +230,15 @@
 
 [[ძვ. წ. 380|380]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
 
+[[ძვ. წ. 379|379]] - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
 
+[[ძვ. წ. 378|378]] - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
+
+[[ძვ. წ. 377|377]] - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
+
+[[ძვ. წ. 376|376]] - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
+
+[[ძვ. წ. 375|375]] - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
 
 {{ესკიზი}}
 
