--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -24,185 +24,185 @@
 
 ==ძვ. წ. V საუკუნე==
 
-*[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
+**[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
                               
-*[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
+**[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
 
-*[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
+**[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
 
-*[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
+**[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
 
-*[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+**[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-*[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი [[დიქტატორი]] გახდა.
+**[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი *[[დიქტატორი]] გახდა.
 
-*[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
+**[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
 
-*[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
+**[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
 
-*[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
+**[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
 
-*[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
+**[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
 
-*[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
+**[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
 
-*[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
+**[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
 
-*[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
+**[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
 
-*[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
+**[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
 
-*[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
+**[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
 
-*[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
+**[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
 
-[[ძვ. წ. 484|484]] - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 484|484]] - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
 
-[[ძვ. წ. 483|483]] - მ. ფაბიუს კ.ფ. ვიბულანუსი, ლ. ვალერიუს მ.ფ. პოტიტუსი (პუბლიკოლა)
+*[[ძვ. წ. 483|483]] - მ. ფაბიუს კ.ფ. ვიბულანუსი, ლ. ვალერიუს მ.ფ. პოტიტუსი (პუბლიკოლა)
 
-[[ძვ. წ. 482|482]] - ქ. ფაბიუს კ.ფ. ვიბულანუს II, კ. იულიუს ც.ფ. იულიუს (II?)
+*[[ძვ. წ. 482|482]] - ქ. ფაბიუს კ.ფ. ვიბულანუს II, კ. იულიუს ც.ფ. იულიუს (II?)
 
-[[ძვ. წ. 481|481]] - კ. (ც.) ფაბიუს კ.ფ. ვიბულანუს (II?), სპურიუს ფურისუს ფუსუსი (ფუსიუსი)
+*[[ძვ. წ. 481|481]] - კ. (ც.) ფაბიუს კ.ფ. ვიბულანუს (II?), სპურიუს ფურისუს ფუსუსი (ფუსიუსი)
 
-[[ძვ. წ. 480|480]] - მ. ფაბიუს კ.ფ. ვიბულანუს II, კნ, მანლიუს პ.ფ. ცინცინატუსი
+*[[ძვ. წ. 480|480]] - მ. ფაბიუს კ.ფ. ვიბულანუს II, კნ, მანლიუს პ.ფ. ცინცინატუსი
 
-[[ძვ. წ. 479|479]] - კ. ფაბიუს კ.ფ. ვიბულანუს III, ტ. ვერგინიუს ოპეტ.ფ. ტრიკოსტუს რუტილუსი
+*[[ძვ. წ. 479|479]] - კ. ფაბიუს კ.ფ. ვიბულანუს III, ტ. ვერგინიუს ოპეტ.ფ. ტრიკოსტუს რუტილუსი
 
-[[ძვ. წ. 478|478]] - ლ. ამილიუს მან.ფ. მამერცინუს (მამერცუს) II, კ. სერვილიუს სტრუქტუს აჰალა
+*[[ძვ. წ. 478|478]] - ლ. ამილიუს მან.ფ. მამერცინუს (მამერცუს) II, კ. სერვილიუს სტრუქტუს აჰალა
 
-[[ძვ. წ. 477|477]] - კ. ჰორატიუს მ.ფ. პულვილუსი, ტ. მენენიუს აგრიპე ფ. ლანატუსი
+*[[ძვ. წ. 477|477]] - კ. ჰორატიუს მ.ფ. პულვილუსი, ტ. მენენიუს აგრიპე ფ. ლანატუსი
 
-[[ძვ. წ. 476|476]] - ა. ვერგილიუს ტრიკოსტუს რუტილუსი, სპ. სერვილის (პ.ფ.?) სტრუქტუსი
+*[[ძვ. წ. 476|476]] - ა. ვერგილიუს ტრიკოსტუს რუტილუსი, სპ. სერვილის (პ.ფ.?) სტრუქტუსი
 
-[[ძვ. წ. 475|475]] - პუბლიუს ვალერიუს პ.ფ. პოპლიკოლა, კაიუს ნაუტიუს სპ.ფ. რუტილუსი (ან რუფუსი)
+*[[ძვ. წ. 475|475]] - პუბლიუს ვალერიუს პ.ფ. პოპლიკოლა, კაიუს ნაუტიუს სპ.ფ. რუტილუსი (ან რუფუსი)
 
-[[ძვ. წ. 474|474]] - ლ. ფურიუს მედულინუსი, ა. მანლიუს კნ. ვულსო
+*[[ძვ. წ. 474|474]] - ლ. ფურიუს მედულინუსი, ა. მანლიუს კნ. ვულსო
 
-[[ძვ. წ. 473|473]] - ლ. ამილიუს მან.ფ. მამერცუს III, ვოპისკუს იულიუს ც.ფ. იულუსი
+*[[ძვ. წ. 473|473]] - ლ. ამილიუს მან.ფ. მამერცუს III, ვოპისკუს იულიუს ც.ფ. იულუსი
 
-[[ძვ. წ. 472|472]] - ლ. პინარიუს მამერცინუს რუფუსი, პ. ფურიუს მედულინუს ფუსუსი
+*[[ძვ. წ. 472|472]] - ლ. პინარიუს მამერცინუს რუფუსი, პ. ფურიუს მედულინუს ფუსუსი
 
-[[ძვ. წ. 471|471]] - აპიუს კლაუდიუს აპ.ფ. კრასინუს (ინ)რეგილენსის საბინუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი
+*[[ძვ. წ. 471|471]] - აპიუს კლაუდიუს აპ.ფ. კრასინუს (ინ)რეგილენსის საბინუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი
 
-[[ძვ. წ. 470|470]] - ლ. ვალერიუს მ.ფ. პოტიტუს (პუბლიკოლა)II, ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)
+*[[ძვ. წ. 470|470]] - ლ. ვალერიუს მ.ფ. პოტიტუს (პუბლიკოლა)II, ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)
 
-[[ძვ. წ. 469|469]] - ტ. ნუმიციუს პრისცუსი, ა. ვერგინიუს (ტრიკოსტუსი) კელიომონტანუსი
+*[[ძვ. წ. 469|469]] - ტ. ნუმიციუს პრისცუსი, ა. ვერგინიუს (ტრიკოსტუსი) კელიომონტანუსი
 
-[[ძვ. წ. 468|468]] - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუს II, კ. სერვილიუს (სტრუკტუს) პრისკუსი
+*[[ძვ. წ. 468|468]] - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუს II, კ. სერვილიუს (სტრუკტუს) პრისკუსი
 
-[[ძვ. წ. 467|467]] - ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)II, კ. ფაბიუს მ.ფ. ვიბულანუსი
+*[[ძვ. წ. 467|467]] - ტი. ემილიუს ლ.ფ. მამერცინუსი (მამერცუსი)II, კ. ფაბიუს მ.ფ. ვიბულანუსი
 
-[[ძვ. წ. 466|466]] - კ. სერვილიუს პრისკუსი II, სპ. პოსტუმინუს ა.ფ. ალბუს რეგილენსისი
+*[[ძვ. წ. 466|466]] - კ. სერვილიუს პრისკუსი II, სპ. პოსტუმინუს ა.ფ. ალბუს რეგილენსისი
 
-[[ძვ. წ. 465|465]] - კ. ფაბიუს მ.ფ. ვიბულანუსი II, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი II,
+*[[ძვ. წ. 465|465]] - კ. ფაბიუს მ.ფ. ვიბულანუსი II, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი II,
 
-[[ძვ. წ. 464|464]] - ა. პოსტუმიუს ა.ფ. ალბუს რეგილენსისი, სპ. ფურიუს მედულინუს ფუსუსი
+*[[ძვ. წ. 464|464]] - ა. პოსტუმიუს ა.ფ. ალბუს რეგილენსისი, სპ. ფურიუს მედულინუს ფუსუსი
 
-[[ძვ. წ. 463|463]] - პ. სერვილიუს სპ.ფ. პრისცუსი, ლ. ებუტიუს ტ.ფ. ჰელვა.
+*[[ძვ. წ. 463|463]] - პ. სერვილიუს სპ.ფ. პრისცუსი, ლ. ებუტიუს ტ.ფ. ჰელვა.
 
-[[ძვ. წ. 462|462]] - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
+*[[ძვ. წ. 462|462]] - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
 
-*[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
+**[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
 
-*[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
+**[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
 
-*[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
+**[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
 
-*[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
+**[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
 
-[[ძვ. წ. 457|457]] - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
+*[[ძვ. წ. 457|457]] - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
 
-[[ძვ. წ. 456|456]] - მ. ვალერიუს მ.ფ. მაქსიმუს ლაკტუკა, სპ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 456|456]] - მ. ვალერიუს მ.ფ. მაქსიმუს ლაკტუკა, სპ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-[[ძვ. წ. 455|455]] - ტიტუს რომილიუს ტ.ფ. როკუს ვატიკანუსი, კ. ვეტურიუს ციკურინუსი
+*[[ძვ. წ. 455|455]] - ტიტუს რომილიუს ტ.ფ. როკუს ვატიკანუსი, კ. ვეტურიუს ციკურინუსი
 
-[[ძვ. წ. 454|454]] - სპ. ტარპეიუს მ.ფ. მონტანუს კაპიტოლინუსი, ა. ატერნიუს (ატენიუს) ვარუს ფონტინალისი
+*[[ძვ. წ. 454|454]] - სპ. ტარპეიუს მ.ფ. მონტანუს კაპიტოლინუსი, ა. ატერნიუს (ატენიუს) ვარუს ფონტინალისი
 
-[[ძვ. წ. 453|453]] - სექს. კინკტილიუსი სექხ.ფ. (ვარუსი), პ. კურიატუს (კურიატიუს) ფისტუს ტრიგემინუსი
+*[[ძვ. წ. 453|453]] - სექს. კინკტილიუსი სექხ.ფ. (ვარუსი), პ. კურიატუს (კურიატიუს) ფისტუს ტრიგემინუსი
 
-[[ძვ. წ. 452|452]] - ტ. (კ.) მენენიუს აგრიპე ფ. ლანატუსი, პ. სესტიუს კ.ფ. კაპიტო (კაპიტოლინუსი) ვატიკანუსი
+*[[ძვ. წ. 452|452]] - ტ. (კ.) მენენიუს აგრიპე ფ. ლანატუსი, პ. სესტიუს კ.ფ. კაპიტო (კაპიტოლინუსი) ვატიკანუსი
 
-[[ძვ. წ. 451|451]] - აპიუს კლაუდიუს აპ.ფ. კრასუს ინრეგილენსის საბინუს II, ტიტუს გენუციუს ლ.ფ. აუგურინუსი
+*[[ძვ. წ. 451|451]] - აპიუს კლაუდიუს აპ.ფ. კრასუს ინრეგილენსის საბინუს II, ტიტუს გენუციუს ლ.ფ. აუგურინუსი
 
-[[ძვ. წ. 450|450]] - [[დეცემვირი]]: აპლიუს კლაუდიუსი, მ. ცორნელიუს მალუგინენსისი, მ. სერგიუსი, ლ. მინუციუსი, ქ. ფაბიუს ვიბულანუსი, ქ. პოეტელიუსი, ტ. ანტონიუს მერენდა, კ. დუილიუსი, ს. ოპიუს კორნიცენი, მ. რაბულეიუსი
+*[[ძვ. წ. 450|450]] - *[[დეცემვირი]]: აპლიუს კლაუდიუსი, მ. ცორნელიუს მალუგინენსისი, მ. სერგიუსი, ლ. მინუციუსი, ქ. ფაბიუს ვიბულანუსი, ქ. პოეტელიუსი, ტ. ანტონიუს მერენდა, კ. დუილიუსი, ს. ოპიუს კორნიცენი, მ. რაბულეიუსი
 
-[[ძვ. წ. 449|449]] - ლ. ვალერიუს პ.ფ. პოტიტუსი, მარკუს ჰორაციუს ბარბატუსი.
+*[[ძვ. წ. 449|449]] - ლ. ვალერიუს პ.ფ. პოტიტუსი, მარკუს ჰორაციუს ბარბატუსი.
 
-[[ძვ. წ. 448|448]] - ლარს (ან სპ.) ჰერმინიუს კორტინესანუსი (აკილინუსი), ტ. ვერგინიუს ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 448|448]] - ლარს (ან სპ.) ჰერმინიუს კორტინესანუსი (აკილინუსი), ტ. ვერგინიუს ტრიკოსტუს კელიომონტანუსი
 
-[[ძვ. წ. 447|447]] - მ. გეგანიუს მ.ფ. მაცერინუსი, კ. იულიუსი (იულუსი?)
+*[[ძვ. წ. 447|447]] - მ. გეგანიუს მ.ფ. მაცერინუსი, კ. იულიუსი (იულუსი?)
 
-[[ძვ. წ. 446|446]] - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი IV, აგრიპა ფურიუს ფუსუსი
+*[[ძვ. წ. 446|446]] - ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი IV, აგრიპა ფურიუს ფუსუსი
 
-[[ძვ. წ. 445|445]] - მარკუს გენუციუს აუგურინუსი, კ. (გაიუსი ან აგრიპა) კურტიუს თილო
+*[[ძვ. წ. 445|445]] - მარკუს გენუციუს აუგურინუსი, კ. (გაიუსი ან აგრიპა) კურტიუს თილო
 
-[[ძვ. წ. 444|444]] - 3 თვის მანძილზე სამხედრო ტრიბუნები, შემდეგ ლ. პაპირიუს მუგილანუსი და ლ. სემპრონიუს ა.ფ. ატრატინუსი
+*[[ძვ. წ. 444|444]] - 3 თვის მანძილზე სამხედრო ტრიბუნები, შემდეგ ლ. პაპირიუს მუგილანუსი და ლ. სემპრონიუს ა.ფ. ატრატინუსი
 
-[[ძვ. წ. 443|443]] - მარკუს გეგანიუს მ.ფ. მაცერინუსი II, კ. კინკტიუს კაპიტოლინუს ბარბატუსი V
+*[[ძვ. წ. 443|443]] - მარკუს გეგანიუს მ.ფ. მაცერინუსი II, კ. კინკტიუს კაპიტოლინუს ბარბატუსი V
 
-[[ძვ. წ. 442|442]] - მ. ფაბიუს კ.ფ. ვიბულანუსი, პოსტუმიუს ებუტიუს ჰელვა კორნიცენი
+*[[ძვ. წ. 442|442]] - მ. ფაბიუს კ.ფ. ვიბულანუსი, პოსტუმიუს ებუტიუს ჰელვა კორნიცენი
 
-[[ძვ. წ. 441|441]] - გაიუს ფურიუს პაცილუს ფუსუსი, მანიუს პაპირიუს კრასუსი
+*[[ძვ. წ. 441|441]] - გაიუს ფურიუს პაცილუს ფუსუსი, მანიუს პაპირიუს კრასუსი
 
-[[ძვ. წ. 440|440]] - პროკულუს გეგანიუს მაცერინუსი, ლ. მენენიუს აგრიპე ლანატუსი II
+*[[ძვ. წ. 440|440]] - პროკულუს გეგანიუს მაცერინუსი, ლ. მენენიუს აგრიპე ლანატუსი II
 
-[[ძვ. წ. 439|439]] - აგრიპა მენენიუს ტ.ფ. ლანატუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი VI
+*[[ძვ. წ. 439|439]] - აგრიპა მენენიუს ტ.ფ. ლანატუსი, ტ. კინკტიუს ლ.ფ. კაპიტოლინუს ბარბატუსი VI
 
-[[ძვ. წ. 438|438]] - სამხედრო ტრიბუნები
+*[[ძვ. წ. 438|438]] - სამხედრო ტრიბუნები
 
-[[ძვ. წ. 437|437]] - მარკუს გეგანიუს მ.ფ. მაცერინუსი III, ლუციუს სერგიუს ლ.ფ. ფიდენასი
+*[[ძვ. წ. 437|437]] - მარკუს გეგანიუს მ.ფ. მაცერინუსი III, ლუციუს სერგიუს ლ.ფ. ფიდენასი
 
-[[ძვ. წ. 436|436]] - ლ. პაპირიუს კრასუსი, მ. კორნელიუს მალუგინენსისი
+*[[ძვ. წ. 436|436]] - ლ. პაპირიუს კრასუსი, მ. კორნელიუს მალუგინენსისი
 
-[[ძვ. წ. 435|435]] - კ. იულიუს იულუსი II, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი
+*[[ძვ. წ. 435|435]] - კ. იულიუს იულუსი II, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი
 
-[[ძვ. წ. 434|434]] - კ. იულიუს იულუსი III, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი II
+*[[ძვ. წ. 434|434]] - კ. იულიუს იულუსი III, ლ (ან პროც.) ვერგინიუს ტრიკოსტუსი II
 
-[[ძვ. წ. 433|433]] - ორი წლის განმავლობაში სამხედრო ტრიბუნები
+*[[ძვ. წ. 433|433]] - ორი წლის განმავლობაში სამხედრო ტრიბუნები
 
-[[ძვ. წ. 431|431]] - ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი, კ. იულიუს მენტო
+*[[ძვ. წ. 431|431]] - ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი, კ. იულიუს მენტო
 
-[[ძვ. წ. 430|430]] - ლ. პაპირიუს კრასუსი, ლ. იულიუს ვოპ.ფ. იულუსი
+*[[ძვ. წ. 430|430]] - ლ. პაპირიუს კრასუსი, ლ. იულიუს ვოპ.ფ. იულუსი
 
-[[ძვ. წ. 429|429]] - ჰოსტუს ლუკრეტიუს ტრიციპიტინუს, ლ. სერგიუს კ.ფ. ფიდენასი II
+*[[ძვ. წ. 429|429]] - ჰოსტუს ლუკრეტიუს ტრიციპიტინუს, ლ. სერგიუს კ.ფ. ფიდენასი II
 
-[[ძვ. წ. 428|428]] - ა. კორნელიუს მ.ფ. კოსუსი, ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი II
+*[[ძვ. წ. 428|428]] - ა. კორნელიუს მ.ფ. კოსუსი, ტ. კინკტუს ლ.ფ. პოენუს ცინცინატუსი II
 
-[[ძვ. წ. 427|427]] - კ. სერვილიუს სტრუკტუს აჰალა, ლ. პაპირიუს ლ.ფ. მუგილანუსი II
+*[[ძვ. წ. 427|427]] - კ. სერვილიუს სტრუკტუს აჰალა, ლ. პაპირიუს ლ.ფ. მუგილანუსი II
 
-[[ძვ. წ. 426|426]] - სამხედრო ტრიბუნები სამი წლის მანძილზე
+*[[ძვ. წ. 426|426]] - სამხედრო ტრიბუნები სამი წლის მანძილზე
 
-[[ძვ. წ. 423|423]] - კ. სემპრონიუს ატრატინუსი, კ. ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 423|423]] - კ. სემპრონიუს ატრატინუსი, კ. ფაბიუს კ.ფ. ვიბულანუსი
 
-[[ძვ. წ. 422|422]] - სამხედრო ტრიბუნები 
+*[[ძვ. წ. 422|422]] - სამხედრო ტრიბუნები 
 
-[[ძვ. წ. 421|421]] - კნ. ფაბიუს ვიბულანუსი, ტ. კინკტუსი ტ.ფ. კაპიტოლინუს ბარბატუსი
+*[[ძვ. წ. 421|421]] - კნ. ფაბიუს ვიბულანუსი, ტ. კინკტუსი ტ.ფ. კაპიტოლინუს ბარბატუსი
 
-[[ძვ. წ. 420|420]] - სამხედრო ტრიბუნები: ლ. კინკტუს ცინცინატუსი III, ლ. ფურიუს მედულინუსი II, მ. მანლიუსი, ა. სემპრონიუს ატრატინუსი
+*[[ძვ. წ. 420|420]] - სამხედრო ტრიბუნები: ლ. კინკტუს ცინცინატუსი III, ლ. ფურიუს მედულინუსი II, მ. მანლიუსი, ა. სემპრონიუს ატრატინუსი
 
-[[ძვ. წ. 419|419]] - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი, პ. ლუკრეციუს ტრიციპიტინუსი, სპ. ნაუტიუს რუტილუსი
+*[[ძვ. წ. 419|419]] - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი, პ. ლუკრეციუს ტრიციპიტინუსი, სპ. ნაუტიუს რუტილუსი
 
-[[ძვ. წ. 418|418]] - სამხედრო ტრიბუნები: ლ. სერგიუს ფიდენასი, მ. პაპირიუს მუგილანუსი, კ. სერვილიუს პრისკუსი
+*[[ძვ. წ. 418|418]] - სამხედრო ტრიბუნები: ლ. სერგიუს ფიდენასი, მ. პაპირიუს მუგილანუსი, კ. სერვილიუს პრისკუსი
 
-[[ძვ. წ. 417|417]] - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი II, პ. ლუკრეციუს ტრიციპიტინუსი II, სპ. რუტილიუს კრასუსი
+*[[ძვ. წ. 417|417]] - სამხედრო ტრიბუნები: აგრიპა მემენიუს ლანატუსი II, პ. ლუკრეციუს ტრიციპიტინუსი II, სპ. რუტილიუს კრასუსი
 
-[[ძვ. წ. 416|416]] - სამხედრო ტრიბუნები: ა. სემპრონიუს ალვატინუსი III, მ. პაპირიუს მუგილანუსი II, სპ. ნაუტიუს რუტილუსი
+*[[ძვ. წ. 416|416]] - სამხედრო ტრიბუნები: ა. სემპრონიუს ალვატინუსი III, მ. პაპირიუს მუგილანუსი II, სპ. ნაუტიუს რუტილუსი
 
-[[ძვ. წ. 415|415]] - სამხედრო ტრიბუნები: პ. კორნელიუს კოსუსი, კ. ვალერიუს პოტიტუსი, კ. კინკტუს ცინცინატუსი, ნ. ფაბიუს ვიბულანუსი
+*[[ძვ. წ. 415|415]] - სამხედრო ტრიბუნები: პ. კორნელიუს კოსუსი, კ. ვალერიუს პოტიტუსი, კ. კინკტუს ცინცინატუსი, ნ. ფაბიუს ვიბულანუსი
 
-[[ძვ. წ. 414|414]] - სამხედრო ტრიბუნები: კ. კორნელიუს კოსუსი, ლ. ვალერიუს პოტიტუსი, ლ. ფაბიუს ვიბულანუსი II, მ. პოსტუმიუს რეგილენსისი
+*[[ძვ. წ. 414|414]] - სამხედრო ტრიბუნები: კ. კორნელიუს კოსუსი, ლ. ვალერიუს პოტიტუსი, ლ. ფაბიუს ვიბულანუსი II, მ. პოსტუმიუს რეგილენსისი
 
-[[ძვ. წ. 413|413]] - აულუს მარკუს კორნელიუს კოსუსი, ლუციუს ფურიუს ლ.ფ. მედულინუსი
+*[[ძვ. წ. 413|413]] - აულუს მარკუს კორნელიუს კოსუსი, ლუციუს ფურიუს ლ.ფ. მედულინუსი
 
-[[ძვ. წ. 412|412]] - კ. ფაბიუს ამბუსტუს ვიბულანუსი, კ. ფურიუს პაცილუსი
+*[[ძვ. წ. 412|412]] - კ. ფაბიუს ამბუსტუს ვიბულანუსი, კ. ფურიუს პაცილუსი
 
-[[ძვ. წ. 411|411]] - ლ. პაპირიუს ლ.ფ. მუგილანუსი (ატრატინუსი), სპ. (ან კ.) ნაუტიუს სპ.ფ. რუტილუსი
+*[[ძვ. წ. 411|411]] - ლ. პაპირიუს ლ.ფ. მუგილანუსი (ატრატინუსი), სპ. (ან კ.) ნაუტიუს სპ.ფ. რუტილუსი
 
-[[ძვ. წ. 410|410]] - მანიუს აემილიუს მამ.ფ. მამერიცინუსი, კ. ვალერიუს ლ.ფ. პოტიტუსი ვოლუსუსი
+*[[ძვ. წ. 410|410]] - მანიუს აემილიუს მამ.ფ. მამერიცინუსი, კ. ვალერიუს ლ.ფ. პოტიტუსი ვოლუსუსი
 
-[[ძვ. წ. 409|409]] - კნ. კორნელიუს ა.ფ. კოსუსი, ლ. ფურიუს ლ.ფ. მედულინუსი III
+*[[ძვ. წ. 409|409]] - კნ. კორნელიუს ა.ფ. კოსუსი, ლ. ფურიუს ლ.ფ. მედულინუსი III
 
-[[ძვ. წ. 408|408]] - 15 წლის მანძილზე სამხედრო ტრიბუნების მართვა
+*[[ძვ. წ. 408|408]] - 15 წლის მანძილზე სამხედრო ტრიბუნების მართვა
 
 ==ძვ. წ. IV საუკუნე==
 
