--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -24,37 +24,37 @@
 
 ==ძვ. წ. V საუკუნე==
 
-**[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
+*[[ძვ. წ. 500|500]] - სერვიუს სულპიციუს პ.ფ. კამარინუსი (კამერინუსი), მანიუს ტულიუს ლონგუსი
                               
-**[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
+*[[ძვ. წ. 499|499]] - ტ. ებუტიუს ტ.ფ. ჰელფა, კ. (ან პ.) ვეტურისი (ვეტურისუსი) გემინუს ციკურინუსი
 
-**[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
+*[[ძვ. წ. 498|498]] - ქ. კლოელიუს სიკულუს, ტიტუს ლარციუს ფლავიუსი (ან რუფუსი) II
 
-**[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 497|497]] - ა. სემპრონიუს ატრატინუსი, მ. მინუციუს აუგურინუსი
 
-**[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
+*[[ძვ. წ. 496|496]] - ა. პოსტუმიუს პ.ფ. ალბუს რეგილენსისი, ტ. ვერგინიუს ა.ფ. ტრიკოსტუს კელიომონტანუსი
 
-**[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი *[[დიქტატორი]] გახდა.
+*[[ძვ. წ. 495|495]] - აპლიუს კლაუდიუს მ.ფ. საბინუს რეგილენსისი, პ. სერვილიუს პ.ფ. პრისცუს სტრუცტუსი. ლარტიუსი *[[დიქტატორი]] გახდა.
 
-**[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
+*[[ძვ. წ. 494|494]] - ა. ვერგინიუს ა.ფ. ტრიცოსტუს კელიომონტანუსი, ტ. ვეტურიუს (ან ვეტურისის) გემინუს ციკურინუსი
 
-**[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
+*[[ძვ. წ. 493|493]] - პოსტმუნიუს კომინიუს აურუნცუს II, სპურიუს კასიუს ვეცელინუს II
 
-**[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
+*[[ძვ. წ. 492|492]] - ტ. გეგანიუს მაცერინუსი, პ. მინუციუს აუგურინუსი
 
-**[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
+*[[ძვ. წ. 491|491]] - მ. მინუციუს აუგურინუს II, ა. სემპრონიუს ატრატინუს II
 
-**[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
+*[[ძვ. წ. 490|490]] - ქ. სულპიციუს ცამერინუს კორნუტუსი, სპ. ლარციუს ფლავიუსი (რუფუსი) II
 
-**[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
+*[[ძვ. წ. 489|489]] - ც. იულიუს იულუსი, პ. პინარიუს მამერტინუს რუფუსი
 
-**[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
+*[[ძვ. წ. 488|488]] - სპ. ნაუტიუს სპ.?ფ. რუტილუსი, სპ. (სექს.?) ფურიუსი (მედულინუსი ან ფურსუსი?)
 
-**[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
+*[[ძვ. წ. 487|487]] - ტ. სიცინიუსი (საბინუსი), კ. აკილიუსი (ტუსკუსი)
 
-**[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
+*[[ძვ. წ. 486|486]] - სპურიუს კასიუს ვეცელინუს III, პროკულუს ვერგინიუს ტრიკოსტუს რუტილუსი
 
-**[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
+*[[ძვ. წ. 485|485]] - სერ. კორნელიუს მალუგინენსისი (კოსუსი), ქ. ფაბიუს კ.ფ. ვიბულანუსი
 
 *[[ძვ. წ. 484|484]] - ლუციუს ამილიუს მამ.ფ. მამერცინუსი (მამერკუსი), კ. (კაესო?) ფაბიუს კ.ფ. ვიბულანუსი
 
