--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -102,13 +102,13 @@
 
 *[[ძვ. წ. 462|462]] - ლ. ლუკრეციუს ტ.ფ. ტრიციპიტინუსი, ტ. ვეტურიუს ტ.ფ. გემინუს ციკურინუსი
 
-**[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
+*[[ძვ. წ. 461|461]] - პ. ვოლუმნიუს მ.ფ. ამინიტინუს გალუსი, სერ. სულპიციუს კამერინუს კორნუტუსი
 
-**[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
+*[[ძვ. წ. 460|460]] - პ. ვალერიუს პ.ფ. პუბლიკოლა II, კ. კლაუდიუს აპ.ფ. ინრეგილენსის (რეგილენსისი) საბინუსი
 
-**[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
+*[[ძვ. წ. 459|459]] - კ. ფაბიუს მ.ფ. ვიბულანუსი III, ლ. კორნელიუს სერ.ფ. მალუგინესის ურიტუსი (კოსუსი)
 
-**[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
+*[[ძვ. წ. 458|458]] - კ. ნაუტიუს სპ.ფ. რუტილუს II, ლუციუს მინუციუს პ.ფ. ესკილინუს აუგურინუსი
 
 *[[ძვ. წ. 457|457]] - მ. (ან კ.) ჰორაციუს მ.ფ. პულვილუს II, კ. მინუციუს პ.ფ. ესკილინუსი (აუგურინუსი)
 
