--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -206,39 +206,41 @@
 
 ==ძვ. წ. IV საუკუნე==
 
-[[ძვ. წ. 394|394]] - კამილუსის პირველი დიქტატურა
+*[[ძვ. წ. 394|394]] - კამილუსის პირველი დიქტატურა
 
-[[ძვ. წ. 393|393]] - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 393|393]] - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 392|392]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 392|392]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 391|391]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+*[[ძვ. წ. 391|391]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 390|390]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+*[[ძვ. წ. 390|390]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
 
-[[ძვ. წ. 389|389]] - სამხედრო ტრიბუნები
+*[[ძვ. წ. 389|389]] - სამხედრო ტრიბუნები
 
-[[ძვ. წ. 388|388]] - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
+*[[ძვ. წ. 388|388]] - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
 
-[[ძვ. წ. 387|387]] - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
+*[[ძვ. წ. 387|387]] - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
 
-[[ძვ. წ. 386|386]] - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
+*[[ძვ. წ. 386|386]] - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
 
-[[ძვ. წ. 385|385]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი ([[382]] წლამდე ესენი მმართველობდნენ).
+*[[ძვ. წ. 385|385]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი (*[[382]] წლამდე ესენი მმართველობდნენ).
 
-[[ძვ. წ. 381|381]] - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
+*[[ძვ. წ. 381|381]] - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
 
-[[ძვ. წ. 380|380]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
+*[[ძვ. წ. 380|380]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
 
-[[ძვ. წ. 379|379]] - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
+*[[ძვ. წ. 379|379]] - სამხედრო ტრიბუნები ლუციუს ვალერიუსი III, კ. სერგიუსი III, ლ. მენენიუსი II, სპ. პაპირიუსი, სერვიუს კორნელიუს მალუგინენსისი
 
-[[ძვ. წ. 378|378]] - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
+*[[ძვ. წ. 378|378]] - სამხედრო ტრიბუნები პ. და კ. მანლიუსები, ლ. იულიუსი, კ. სექსტილიუსი, მ. ალბინიუსი, ლ. ანტისციუსი (პარიციუსი და პლებსი)
 
-[[ძვ. წ. 377|377]] - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
+*[[ძვ. წ. 377|377]] - სამხედრო ტრიბუნები სპ. ფურიუსი, ლ. სერვილიუს II, ც. ლიცინიუსი, პ. კლაელიუსი, მ. ჰორაციუსი, ლ. გეგანიუსი.
 
-[[ძვ. წ. 376|376]] - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
+*[[ძვ. წ. 376|376]] - სამხედრო ტრიბუნები ლ. ამილიუსი, პ. ვალერიუს IV, კ. ვეტურიუს სერვიუს სულპიციუსი, ლ. და კ. კინტიუს ცინცინატუსები
 
-[[ძვ. წ. 375|375]] - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
+*[[ძვ. წ. 375|375]] - მხოლოდ ორი ტრიბუნი, კ. ლიცინიუს კლავიუსი, ლუციუს სექსტიუსი
+
+*[[ძვ. წ. 374|374]] -  სამხედრო ტრიბუნები ლ. ლურიუსი, ა. მანლიუსი, სერვიუს სულპიციუსი, სერვიუს კორნელიუსი, პ. და კ. ვალერიუსები.
 
 {{ესკიზი}}
 
