--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -269,7 +269,7 @@
 
 ==ლიტერატურა==
 
-* [[პლუტარქოსი]] შედარებითი ბიოგრაფიები
+* [[პლუტარქე]]  პარალელური ბიოგრაფიები
 * [[გაიუს ტრანკვილიუს სვეტონიუსი]] 12 კეისარის ცხოვრება.
 * ლევან სანიკიძე, კეისარიადა (1989 თბილისის უნივერსიტეტის გამომცემლობა)
 * ძველი რომის ისტორია - მინსკი
