/* მეორე ტრიუმვირატი - ოქტავიანი */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -207,9 +207,9 @@
 ==მეორე ტრიუმვირატი - ოქტავიანი==
 კეისარის სიკვდილის შემდეგ კონსული [[მარკუს ანტონიუსი]] გამოვიდა სენატის წინაშე და განუმარტა, რომ კეისარის ტირანად ცნობა გამოიწვევს მისი ყველა განკარგულების გაუქმებას, რაც სახელმწიფოსთვის მძიმე შედეგებს იქონიებს, ციცერონმა კი შესთავაზა სენატს კომპრომისული გადაწყვეტილა - კეისარი ტირანად არ გამოეცხადებინათ, მაგრამ არც მისი მკვლელები დაესაჯათ, მიუხედავად ამ გადაწყვეტილებისა, კასიუსს და ბრუტუსს საბერძნეთში მოუწიათ გაქცევა, რადგან რომაელებმა კეისარის დაკრძალვის შემდეგ შეთქმულთა სახლების რბევა დაიწყეს.
 
-ანტონიუსი კეისარის პრინციპებზე დაყრდნობით უფრო და უფრო მეტ ძალაუფლებას იკრეფდა, რითიც რესპუბლიკელების უკმაყოფილება გამოიწვია, ამავდროულად მას კეისარის მომხრეებიც განუდგნენ, ისინი ანტონიუსს კეისარის მკვლელებთან თანამშრომლობაში დებდნენ ბრალს. მათი ახალი ლიდერი გახდა კეისარის დის შვილიშვილი 19 წლის [[ოქტავიან ავგუსტუსი|ოქტავიანი]], რომელსაც ასევე ციცერონი აქტიურად უჭერდა მხარს.
+ანტონიუსი კეისარის პრინციპებზე დაყრდნობით უფრო და უფრო მეტ ძალაუფლებას იკრეფდა, რითიც რესპუბლიკელების უკმაყოფილება გამოიწვია, ამავდროულად მას კეისარის მომხრეებიც განუდგნენ, ისინი ანტონიუსს კეისარის მკვლელებთან თანამშრომლობაში დებდნენ ბრალს. მათი ახალი ლიდერი გახდა კეისარის დის შვილიშვილი 19 წლის [[ოქტავიან ავგუსტუსი|ოქტავიანე]], რომელსაც ასევე ციცერონი აქტიურად უჭერდა მხარს.
 
-თავიდან ანტონიუსსა და ოქტავიანს შორის უთანხმოება იყო, ანტონიუსი გალიაში წავიდა და [[მარკუს ამელიუს ლეპიდი|მარკუს ამელიუს ლეპიდთან]] ერთად ოქტავიანის წინააღმდეგ ჯარების შეკრება დაიწყო. 43 წელს ოქტავიანმა დაამარცხა ანტონიუსი, მაგრამ ამის შემდეგ სენატორებმა სცადეს ოქტავიანის გვერდის ავლით უწინდელი ძალაუფლების აღდგენა. ამ მიზეზების გამო მან გაწყვიტა სენატთან და ოპტიმალებთან კავშირი და იმავე წლის ოქტომბერში, ქალაქ ბონინში შეხვდა ანტონიუსს და ლიპიდს, სადაც მათ ხელშეკრულება დადეს. ეს კავშირი ისტორიაში მეორე ტრიუმვირატის სახელით შევიდა.
+თავიდან ანტონიუსსა და ოქტავიანეს შორის უთანხმოება იყო, ანტონიუსი გალიაში წავიდა და [[მარკუს ამელიუს ლეპიდი|მარკუს ამელიუს ლეპიდთან]] ერთად ოქტავიანის წინააღმდეგ ჯარების შეკრება დაიწყო. 43 წელს ოქტავიანმა დაამარცხა ანტონიუსი, მაგრამ ამის შემდეგ სენატორებმა სცადეს ოქტავიანის გვერდის ავლით უწინდელი ძალაუფლების აღდგენა. ამ მიზეზების გამო მან გაწყვიტა სენატთან და ოპტიმალებთან კავშირი და იმავე წლის ოქტომბერში, ქალაქ ბონინში შეხვდა ანტონიუსს და ლიპიდს, სადაც მათ ხელშეკრულება დადეს. ეს კავშირი ისტორიაში მეორე ტრიუმვირატის სახელით შევიდა.
 
 [[სურათი:Augustus.jpg|thumb|left|ოქტავიან ავგუსტუსი, ბრინჯაოს ქანდაკება ათენის არქეოლოგიის მუზეუმიდან]]
 ტრიუმვირებმა გაიყვეს დასავლეთ პროვინციები და განიძრახეს კასიუსის და ბრუტუსის წინააღმდეგ ომის დაწყება. რომში დაბრუნების თანავე მათ დაიმტკიცეს აღებული უფლებამოსილებები და გამოაცხადეს [[პროსკრიპცია|პროსკრიპციები]]. პროსკრიპციულ სიებში პირველი ადგილი ციცერონმა დაიკავა, ამ სიებში ასევე შევიდნენ კეისარის მოწინააღმდეგეები და ტრიუმვირების მტრები.
@@ -217,13 +217,13 @@
 ანტონიუსის ჯარი რესპუბლიკელების არმიას, რომელსაც სათავეში ბრუტუსი და კასიუსი უფდგნენ, მაკედონიის ქალაქ [[ფილიპიის ბრძოლა|ფილიპიასთან]] შეხვდა. [[ძვ. წ. 42]] წლის [[23 ოქტომბერი|23 ოქტომბერს]] რესპუბლიკელები დამარცხდნენ და ბრუტუსმა და კასიუსმა თავი მოიკლეს. 
 
 
-ამ გამარჯვების შემდეგ ტრიუმვირებმა თავიდან გაიყვეს პროვინციები, ლიპიდი წავიდა აფრიკაში და მალევე ჩამოშორდა პოლიტიკას, ოქტავიანი დაბრუნდა რომში, ხოლო ანტონიუსი წავიდა აღმოსავლეთისკენ. კილიკიაში იგი კლეოპატრას შეხვდა, რომელსაც სურდა რომის ახალ მმართველობასთანაც გაეგრძელებინა ის ურთიერთობა რაც კეისართან ჰქონდა, თან ანტონიუსის დახმარებით გაეფართოვებინა ეგვიპტე.
+ამ გამარჯვების შემდეგ ტრიუმვირებმა თავიდან გაიყვეს პროვინციები, ლიპიდი წავიდა აფრიკაში და მალევე ჩამოშორდა პოლიტიკას, ოქტავიანე დაბრუნდა რომში, ხოლო ანტონიუსი წავიდა აღმოსავლეთისკენ. კილიკიაში იგი კლეოპატრას შეხვდა, რომელსაც სურდა რომის ახალ მმართველობასთანაც გაეგრძელებინა ის ურთიერთობა რაც კეისართან ჰქონდა, თან ანტონიუსის დახმარებით გაეფართოვებინა ეგვიპტე.
 
 ძვ. წ. 40 წელს ანტონიუსმა და ოქტავიანმა ქალაქ ბრუნდისიუმში დადეს ახალი ხელშეკრულება, რომლის გასამყარებლად ანტომიუსმა ოქტაიან და მოიყვანა ცოლად. ოქტავიანმა კი არისტოკრატიასთან დასაახლოვებლად მოიყვანა სახელგანთქმული არისტოკრატის ლივიუს დრუზუსის შვილი და არანაკლებ წარჩინებული არისტოკრატის კლავდიუს ნერონის ყოფილი ცოლი ლივია. იგი ხალხს დაპირდა რომ ანტონიუსის აღმოსავლეთიდან დაბრუნებისას ისინი გადადგებოდნენ თანამდებობებიდან და აღადგენდნენ რესპუბლიკას.
 
-ანტონიუსი ამ დროს პართიელებთან ომით იყო დაკავებული, რომელიც მან სამარცხვინოთ წააგო და წავიდა ევგიპტეში, სადაც, მიუხედავად იმისა, რომ მას უკვე ჰყავდა ცოლი, მან კლეოპატრაზე იქორწინა და აღმოსავლეთ პროვინციები მის შვილებს უძღვნა. მისმა განქორწინებამ ოქტავიასთან და ანდერძის გამოქვეყნებამ, რომლითაც იგი ითხოვდა მის ალექსანდრიაში დაკრძალვას, რომში დიდი უკმაყოფილება გამოიწვია და გააქარწყლა რომში მისი პოპულარობა. ანტონიუსსა და ოქტავიანს შორის კავშირი გაწყდა. 
+ანტონიუსი ამ დროს პართიელებთან ომით იყო დაკავებული, რომელიც მან სამარცხვინოთ წააგო და წავიდა ევგიპტეში, სადაც, მიუხედავად იმისა, რომ  უკვე ჰყავდა ცოლი, კლეოპატრაზე იქორწინა და აღმოსავლეთ პროვინციები მის შვილებს უძღვნა. მისმა განქორწინებამ ოქტავიასთან და ანდერძის გამოქვეყნებამ, რომლითაც იგი ითხოვდა მის ალექსანდრიაში დაკრძალვას, რომში დიდი უკმაყოფილება გამოიწვია და გააქარწყლა რომში მისი პოპულარობა. ანტონიუსსა და ოქტავიანს შორის კავშირი შეწყდა. 
 
-ოქტავიანი ფლოტით გაემართა ანტონიუსთან საომრად და ამ ომის პირველივე საზღვაო ბრძოლამ [[ძვ. წ. 31]] წლის [[2 სექტემბერი|2 სექტემბერს]] [[აქტიუმის ბრძოლა|აქტიუმის კუნძულებთან]] განაპირობა ომის ბედი. ანტონიუსის და კლეოპატრას ფლოტი მთლიანად განადგურდა. 30 წლის ზაფხულში ანტონიუსმა და კლეოპატრამ მოიკლეს თავი. ოქტავიანმა ეგვიპტე შეუერთა რომის იმპერიას. ამით სამოქალაქო ომები დასრულდა.
+ოქტავიანე ფლოტით გაემართა ანტონიუსთან საომრად და ამ ომის პირველივე საზღვაო ბრძოლამ [[ძვ. წ. 31]] წლის [[2 სექტემბერი|2 სექტემბერს]] [[აქტიუმის ბრძოლა|აქტიუმის კუნძულებთან]] განაპირობა ომის ბედი. ანტონიუსის და კლეოპატრას ფლოტი მთლიანად განადგურდა. 30 წლის ზაფხულში ანტონიუსმა და კლეოპატრამ თავი მოიკლეს . ოქტავიანემ ეგვიპტე შეუერთა რომის იმპერიას. ამით სამოქალაქო ომები დასრულდა.
 
 ==რესპუბლიკის დასასრული - იმპერიად გარდაქმნა==
 
