--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -2,7 +2,7 @@
 
 ==ძვ. წ. VI საუკუნე==
 
-* [[ძვ. წ. 509|509]] - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
+* [[ძვ. წ. 509|509]] ('''245 A.V.C.''') - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
 * [[ძვ. წ. 509|509]] - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
